tests/integration/commands/export/06_parallelization_sdoc_parsing_problem_in_child_process/test.itest
RUN: %expect_exit 1 %strictdoc export %S --output-dir Output | filecheck %s --dump-input=fail

CHECK: error: could not parse file: {{.*}}input1.sdoc.
CHECK: TextXSyntaxError: {{.*}}input1.sdoc:1:1: Expected '[DOCUMENT]' => '*THIS DOCUM'
CHECK: error: Parallelizer: One of the child processes has exited prematurely.
